# docgram

./: .env.example  .gitignore  Pulumi.yaml  __main__.py  makefile  manage.py  pyproject.toml
app/: config.py  dependencies.py  log_conf.py  main.py  models.py
app/ai/: ai_agents.py  rag.py
app/routers/: post.py  user.py  utils.py
web/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/components/: app-layout.tsx  comment-section.tsx  edit-post-modal.tsx  edit-profile-modal.tsx  more-menu.tsx  pdf-chat-modal.tsx  pdf-upload-modal.tsx  post-card-skeleton.tsx  post-card.tsx  user-profile.tsx
web/src/components/auth/: auth-guard.tsx  login-form.tsx  register-form.tsx
web/src/components/ui/: drawer.tsx  scroll-area.tsx
web/src/hooks/: use-chat.ts  use-posts.ts  use-toast.ts  use-user-profile.ts
web/src/lib/: api-client.ts
web/src/lib/services/: post-service.ts
web/src/pages/: AuthPage.tsx  HomePage.tsx  ProfilePage.tsx  SearchPage.tsx  loading.tsx  providers.tsx
web/src/stores/: auth-store.ts
