[project]
name = "docgram"
version = "0.1.0"
description = "Developed by ikram98ai. Migrated version of bookish"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings==2.10.1",
    "bcrypt==4.0.1",
    "boto3==1.40.18",
    "fastapi[standard]==0.116.1",
    "mangum==0.19.0",
    "openai-agents==0.2.9",
    "passlib==1.7.4",
    "pillow==11.3.0",
    "pydantic[email]==2.11.7",
    "pymupdf==1.26.4",
    "pynamodb==6.1.0",
    "python-jose==3.5.0",
    "pinecone==7.3.0",
    "markitdown[pdf]==0.1.3",
    "pulumi==3.212.0",
    "pulumi-aws==7.14.0",
    "pulumi-command==1.1.3",
    "pulumi-docker==4.10.0",
    "pulumi-synced-folder==0.12.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "typer>=0.16.1",
]
